@@ -21,8 +21,10 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
 import uk.gov.hmcts.reform.hmc.ApplicationParams;
 import uk.gov.hmcts.reform.hmc.TestIdamConfiguration;
+import uk.gov.hmcts.reform.hmc.client.datastore.model.DataStoreCaseDetails;
 import uk.gov.hmcts.reform.hmc.config.SecurityConfiguration;
 import uk.gov.hmcts.reform.hmc.data.SecurityUtils;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.HearingStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.PutHearingStatus;
 import uk.gov.hmcts.reform.hmc.model.CaseDetails;
 import uk.gov.hmcts.reform.hmc.model.DeleteHearingRequest;
@@ -39,8 +41,7 @@ import uk.gov.hmcts.reform.hmc.utils.TestingUtil;
 
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.doReturn;
@@ -91,7 +92,6 @@ class HearingManagementControllerTest {
         hearingStatusAuditService.saveAuditTriageDetailsWithCreatedDate(any(),any(),any(),any(),any(),any(),any());
         hearingStatusAuditService.saveAuditTriageDetailsWithUpdatedDate(any(),any(),any(),any(),any(),any(),any());
     }
-
 
     @Nested
     @DisplayName("saveHearing")
@@ -258,8 +258,8 @@ class HearingManagementControllerTest {
                                                                                      applicationParams,securityUtils);
             GetHearingsResponse hearingRequest = controller.getHearings(validCaseRef, null);
             verify(hearingManagementService, times(1)).getHearings(any(), any());
-            assertEquals(hearingRequest.getCaseRef(), validCaseRef);
-            assertTrue(hearingRequest.getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingRequest.getCaseRef()).isEqualTo(validCaseRef);
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
 
         @Test
@@ -272,15 +272,16 @@ class HearingManagementControllerTest {
             List<String> rolesRequired = Lists.newArrayList(HEARING_VIEWER, LISTED_HEARING_VIEWER);
             List<String> filteredRoleAssignments = Lists.newArrayList(LISTED_HEARING_VIEWER);
 
-            doReturn(filteredRoleAssignments).when(accessControlService).verifyCaseAccess(validCaseRef, rolesRequired);
+            doReturn(filteredRoleAssignments).when(accessControlService).verifyCaseAccess(validCaseRef, rolesRequired,
+                                                                                          null);
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
                                                                                      applicationParams, securityUtils);
             GetHearingsResponse hearingRequest = controller.getHearings(validCaseRef, null);
             verify(hearingManagementService, times(1)).getHearings(validCaseRef, "LISTED");
-            assertEquals(hearingRequest.getCaseRef(), validCaseRef);
-            assertEquals("LISTED", hearingRequest.getCaseHearings().get(0).getHmcStatus());
-            assertTrue(hearingRequest.getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingRequest.getCaseRef()).isEqualTo(validCaseRef);
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHmcStatus()).isEqualTo("LISTED");
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
 
         @Test
@@ -295,8 +296,8 @@ class HearingManagementControllerTest {
                                                                                      applicationParams, securityUtils);
             GetHearingsResponse hearingRequest = controller.getHearings(validCaseRef, status);
             verify(hearingManagementService, times(1)).getEmptyHearingsResponse(validCaseRef);
-            assertEquals(hearingRequest.getCaseRef(), validCaseRef);
-            assertTrue(hearingRequest.getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingRequest.getCaseRef()).isEqualTo(validCaseRef);
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
     }
 
@@ -364,25 +365,39 @@ class HearingManagementControllerTest {
         @Test
         void shouldReturnHearingResponseForListed() {
             List<String> ccdCaseRefs  = List.of("9372710950276233");
-            doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(ccdCaseRefs.get(0), "LISTED"))
+            DataStoreCaseDetails caseDetails = DataStoreCaseDetails.builder()
+                .id("9372710950276233")
+                .jurisdiction("CMC")
+                .build();
+            List<DataStoreCaseDetails> cases = List.of(caseDetails);
+            doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(ccdCaseRefs.getFirst(),
+                                                                      HearingStatus.LISTED.name()))
                 .when(hearingManagementService)
                 .getHearings(any(), any());
+            doReturn(cases).when(hearingManagementService).getCaseSearchResults(any(), any(), any());
             HearingManagementController controller = new HearingManagementController(
                 hearingManagementService,
                 accessControlService,
                 applicationParams, securityUtils
             );
-            List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs, null);
+            List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs,
+                                                               null,"AAT_PRIVATE");
             verify(hearingManagementService, times(1)).getHearings(any(), any());
-            assertEquals(hearingsResponseList.get(0).getCaseRef(), ccdCaseRefs.get(0));
-            assertTrue(hearingsResponseList.get(0).getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingsResponseList.getFirst().getCaseRef()).isEqualTo(ccdCaseRefs.getFirst());
+            assertThat(hearingsResponseList.getFirst().getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
 
         @Test
         void shouldReturnHearingResponseForListOfCases() {
             List<String> ccdCaseRefs  = List.of("9372710950276233", "9856815055686759");
-            for (String ccdCaseRef : ccdCaseRefs) {
-                doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(ccdCaseRef, null))
+            DataStoreCaseDetails caseDetails = DataStoreCaseDetails.builder()
+                .id("9856815055686759")
+                .jurisdiction("CMC")
+                .build();
+            List<DataStoreCaseDetails> cases = List.of(caseDetails);
+            doReturn(cases).when(hearingManagementService).getCaseSearchResults(any(), any(), any());
+            for (DataStoreCaseDetails dataStoreCaseDetails : cases) {
+                doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(dataStoreCaseDetails.getId(), null))
                     .when(hearingManagementService)
                     .getHearings(any(), any());
             }
@@ -391,10 +406,11 @@ class HearingManagementControllerTest {
                 accessControlService,
                 applicationParams, securityUtils
             );
-            List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs, null);
-            verify(hearingManagementService, times(2)).getHearings(any(), any());
-            assertEquals(hearingsResponseList.get(0).getCaseRef(), ccdCaseRefs.get(1));
-            assertTrue(hearingsResponseList.get(0).getCaseHearings().get(0).getHearingIsLinkedFlag());
+            List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs,
+                                                                                 null, "AAT_PRIVATE");
+            verify(hearingManagementService, times(1)).getHearings(any(), any());
+            assertThat(hearingsResponseList.getFirst().getCaseRef()).isEqualTo(ccdCaseRefs.get(1));
+            assertThat(hearingsResponseList.getFirst().getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
     }
 
